Implemented the method and its tests: removeFromList()